--- a/makefile.mingw
+++ b/makefile.mingw
@@ -301,7 +301,7 @@ ASFLAGS	=  -O1 -f coff -w-orphan-labels
 
 	DEF	:= -DBUILD_WIN32 -DUSE_SPEEDHACKS -DFILENAME=$(NAME) -DMMX=$(MMX)
 
-DEF	:= $(DEF) -DVER_ALPHA=\"$(shell git log --oneline $(shell git describe --tags --abbrev=0).. | wc -l || echo 0)\"
+DEF	:= $(DEF) -DVER_ALPHA=$(shell git log --oneline $(shell git describe --tags --abbrev=0).. | wc -l || echo 0)
 
 ifdef UNICODE
 	DEF	:= $(DEF) -D_UNICODE
