--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
       build_type: fbn-xp-gcc
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       build_type: fbn-xp-debug-gcc
-shallow_clone: true
+shallow_clone: false # we need some git history for parsing last commit hash/date
 clone_depth: 1
 install:
   - if "%build_type%"=="fbn-xp-gcc" set "PATH=C:\DXSDK;C:\MinGW\bin;C:\Windows\System32;C:\Windows;%PATH%"
